<resources>
    <string name="app_name">Solar Payback</string>
    <string name="user_name">Yuşa Sarısoy</string>
    <string name="user_mail">myusarisoy@gmail.com</string>
    <string name="save">SAVE</string>
    <string name="tr">TR</string>
    <string name="en">EN</string>
    <string name="de">DE</string>
    <string name="create_an_account">Create an account for Solar Payback.</string>
    <string name="create_account">Create account</string>
    <string name="have_an_account">Have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="mail">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="back">Back</string>
    <string name="go_back">Go Back</string>
    <string name="login_to">Login to Solar Payback.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="complete_register">Complete register</string>
    <string name="complete">Complete</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="continueTo">Continue</string>
    <string name="sure_to_sign_out">Are you sure you want to sign out?</string>
    <string name="sure_to_go_back">Are you sure you want to go back? If you do this, your added appliances will be deleted.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="search">Search</string>
    <string name="detect">Detect</string>
    <string name="find_your_account">Find your Solar Payback account.</string>
    <string name="enter_your_mail">Enter your email to reset your password.</string>
    <string name="reset_password">Reset password</string>
    <string name="consumer_type">Please choose your consumer type.</string>
    <string name="calculation_type">Please choose your calculation type you want to use with.</string>
    <string name="complete_bill">Please complete the missing parts in the bill.</string>
    <string name="complete_appliance">Please complete the missing parts of the appliance(s).</string>
    <string name="add_appliance">Please select appliance(s)\nyou want to calculate.</string>
    <string name="grid_choice">Please choose the scenario you want to use.</string>
    <string name="residental">Residential</string>
    <string name="commercial">Commercial</string>
    <string name="bill">Bill</string>
    <string name="add">Add</string>
    <string name="appliances">Appliances</string>
    <string name="on_grid">On-Grid</string>
    <string name="off_grid">Off-Grid</string>
    <string name="enter_your_area">Enter your area</string>
    <string name="area_place">Area of your place (m²)</string>
    <string name="add_annual_billing">Add annual billing</string>
    <string name="billing_amount">Billing Amount (₺)</string>
    <string name="annual_billing_amount">Annual Billing Amount (₺)</string>
    <string name="total_power_consumption">Total Power Consumption (kW)</string>
    <string name="save_appliances">Are you sure to add the appliance(s)?</string>
    <string name="appliances_list">Appliances List</string>
    <string name="no_location">Please detect your location or select a city to continue.</string>
    <string name="no_appliance">Please add at least one appliance to continue.</string>
    <string name="add_new_appliance">Add a new appliance</string>
    <string name="write_new_appliance">Please write the name of your new appliance you want to add.</string>
    <string name="watts">Watts</string>
    <string name="quantity">Quantity</string>
    <string name="hours">Hours</string>
    <string name="location_type">Location type</string>
    <string name="select_the_country">Select the country</string>
    <string name="select_the_battery">Select the battery</string>
    <string name="find_a_location">Find a location</string>
    <string name="select_or_detect">Please make your location choice.\nDetect or Search</string>
    <string name="select_your_country">Please select your country.</string>
    <string name="select_a_battery">Please select a battery.</string>
    <string name="select_a_city">Please select a city where you want to display the solar irradiance data.</string>
    <string name="overview">Overview</string>
    <string name="appliance_overview">Appliance Overview</string>
    <string name="monthly_overview">Monthly Overview</string>
    <string name="month">Month</string>
    <string name="payment">Payment</string>
    <string name="power_consumption">Power Consumption</string>
    <string name="power_consumption_2">Energy Consumption</string>
    <string name="energy_saver_tips">Energy Saver Tips</string>
    <string name="air_conditioner_consumption_text">If your house has electric heat, you’ll see a big spike on your electricity bill in the middle of winter when you use a lot of power. If you have a heat pump and use it a lot, you may run it somewhere between 10 and 15 hours a day. If your electricity costs 10 cents an hour, that could cost you $15 to $22 a day. The same applies to homes with central air conditioning in the middle of summer.</string>
    <string name="air_conditioner_saver_text">Install a programmable thermostat and set it back at least 10 degrees for eight hours a day. Doing so can save you 10 percent on your energy costs every year, according to the U.S. Department of Energy.</string>
    <string name="water_heater_consumption_text">Water heating uses a good bit of power as well. When you take a shower or run a load of clothes in the washer, the electric water heater might run for an hour reheating the water in the tank. That is 40 cents. A typical household can burn several dollars a day heating water. Because we do not normally think of it this way, it is funny to consider that every shower you take costs 40 cents! When you add in the cost of washing and drying the towels (every load of clothes that you run might cost $1 to $2 for washing and drying), plus the soap and shampoo, it can cost nearly a buck to take a shower!</string>
    <string name="water_heater_saver_text">Shorten your showers and wash your clothes with cold water. You can also set your water heater to at most 120 degrees. Every 10 degree reduction in water heater temperature can save between 3–5 percent in monthly energy costs, according to the U.S. Department of Energy.</string>
    <string name="fridge_consumption_text">Fridges are big-time energy hogs because they use electricity all the time, in many cases for 10 hours or more every day. That comes to about $1 a day, which you can double if you have a second refrigerator or standing freezer.</string>
    <string name="fridge_saver_text">Make sure your refrigerator is set on the optimal temperature and reconsider that extra fridge in the garage.</string>
    <string name="lights_consumption_text">Individual incandescent light bulbs don’t use that much electricity, comparatively speaking, but costs can add up quick. Many light fixtures use more than one bulb and it’s easy to leave lights on throughout your house when you’re not using them. Ten light bulbs use 6 cents an hour. If you use those bulbs for 6 hours a day, it’ll cost you 36 cents a day or about $10 a month. That may not sound like a lot, but $120 a year for lights that you may not be using all the time does.</string>
    <string name="lights_saver_text">Upgrade to energy-efficient CFLs or LEDs when your incandescent bulbs expire. And don’t forget to turn off the lights when you’re not using them.</string>
    <string name="goto_main_page">Go to main page</string>
    <string name="go_back_main_page">Are you sure to go back to main page? All data will be deleted.</string>
    <string name="panel_choice">Please choose a panel you want to use.</string>
    <string name="panel_1">Monocrystalline Solar Panel\n(330 W, 1.685 m²)</string>
    <string name="panel_2">Polycrystalline Solar Panel\n(250 W, 1.67 m²)</string>
    <string name="soon">Soon!</string>
    <string name="area_info">Please enter your area information.</string>
    <string name="appliance_annual_billing">Please enter your annual billing amount.</string>
    <string name="want_generator">Generator choice</string>
    <string name="look_generator">Do you want to look at the generators?</string>
    <string name="generator_choice">Please choose a generator you want to use.</string>
    <string name="generator_1">Automatic Diesel Generator With Motor Cabinet\n(15 kVA)</string>
    <string name="generator_2">Automatic Diesel Generator with Cabinet\n(110 kVA)</string>
    <string name="battery_1">Lithium-Ion\n(LFeLi-12200M)</string>
    <string name="battery_2">Lead Acid\n(6-GFM(G)-200)</string>
    <string name="pricing_generator_1">15.000 ₺</string>
    <string name="pricing_generator_2">75.000 ₺</string>
    <string name="complete_parts_appliances">Please complete the missing part of the appliance(s).</string>
    <string name="make_sure_to_complete">Please makes sure to complete the missing parts.</string>
    <string name="long_payback_period">Payback period is too long. You should use On-Grid method.</string>
    <string name="internet_connection">Please check your internet connection.</string>
    <string name="trying_to_location">We are trying to detect your location...</string>
    <string name="valid_amount">Please enter a valid annual billing amount.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="six_digits">Password must contains at least 6 characters.</string>
    <string name="enter_full_name">Please enter your full name.</string>
    <string name="enter_email">Please enter your mail address.</string>
    <string name="enter_password">Please enter your password.</string>
    <string name="registered_email">Enter your registered email address.</string>
    <string name="reset_your_password">We have sent you instructions to reset your password!</string>
    <string name="failed_to_reset_passowrd">Failed to send reset email!</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="intro1">Solar Payback is a mobile application that provides to solar energy calculation for your billing amounts or your home appliances.</string>
    <string name="intro2">You can save your monthly billing amount or select appliances in your home and their amounts, and usage durations during the day.</string>
    <string name="intro3">"If you are ready, we can start!"</string>
    <string name="please_wait">Please wait...</string>
    <string name="air_conditioner">Air Conditioner</string>
    <string name="bakery">Bakery</string>
    <string name="coffee_machine">Coffee Machine</string>
    <string name="computer">Computer</string>
    <string name="fridge">Fridge</string>
    <string name="hair_dryer">Hair Dryer</string>
    <string name="iron">Iron</string>
    <string name="lights">Lights</string>
    <string name="oven">Oven</string>
    <string name="smartphone">Smartphone</string>
    <string name="television">Television</string>
    <string name="vacuum_cleaner">Vacuum Cleaner</string>
    <string name="washing_machine">Washing Machine</string>
    <string name="water_heater">Water Heater</string>
    <string name="city">City:&#160;</string>
    <string name="solar_irradiance">,&#160;Solar Irradiance Data:&#160;</string>
    <string name="selected">&#160;selected.</string>
    <string name="unselected">&#160;unselected.</string>
    <string name="exchange_rate">Getting exchange rates</string>
    <string name="selected_panel_energy">Selected Panel Power:&#160;</string>
</resources>