<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/core_white"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/solar_energy" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/go_back"
            android:textColor="@color/red"
            android:textSize="25sp"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/sure_to_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proxima_nova"
            android:gravity="center"
            android:text="@string/sure_to_go_back"
            android:textColor="@color/core_black"
            android:textSize="20sp"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/cancel_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:fontFamily="@font/proxima_nova"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/core_white"
            android:textSize="20sp"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/confirm_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:fontFamily="@font/proxima_nova"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/core_white"
            android:textSize="20sp"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

</LinearLayout>