<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/core_white"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".FragmentWelcome">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/solar_energy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_language"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/language" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/proxima_nova"
            android:gravity="center"
            android:text="@string/create_an_account"
            android:textColor="@color/core_black"
            android:textSize="25sp"
            tools:ignore="UnusedAttribute" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/transparent" />

        <Button
            android:id="@+id/button_create_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/trimmed_corners"
            android:padding="10dp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/core_white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_have_an_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proxima_nova"
            android:gravity="start"
            android:text="@string/have_an_account"
            android:textColor="@color/core_black"
            android:textSize="20sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/proxima_nova"
            android:gravity="start"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

</LinearLayout>